Athena 0.5 (Memory, TXT-input, benchmarking, any JSON, more configs, logging, typing)

--- a/config.ini
+++ b/config.ini
@@ -4,3 +4,17 @@ Temperature = 1.0
 MaxOutputTokens = 1024
 TopP = 1.0
 Store = true
+
+[Parsing]
+TextParsingChunkSize = 512
+EnforceUniformChunks = true
+
+[Memory]
+Entries = 5
+TokensPerMemory = 200
+SearchResults = 3
+
+[Search]
+MaxTokens = 2048
+MaxDistance = 1.2
+MaxResults = 96
