--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,8 @@ overrides==7.7.0
 packaging==25.0
 posthog==5.4.0
 protobuf==6.31.1
+psutil==7.0.0
+py-cpuinfo==9.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pybase64==1.4.1
